--- a/css/main.css
+++ b/css/main.css
@@ -466,4 +466,237 @@
 .advantages__text {
   line-height: 150%;
   color: #898989;
+}
+
+.products {
+  padding-bottom: 44px;
+}
+@media (max-width: 1270px) {
+  .products {
+    padding-bottom: calc(33px + 11 * ((100vw - 320px) / 950));
+  }
+}
+.products__wrapper {
+  width: 100vw;
+}
+.products__container {
+  max-width: 1270px;
+  width: 100%;
+  margin: 0 auto;
+}
+.products__title {
+  font-size: 40px;
+  line-height: 120%;
+  font-weight: 700;
+  text-align: center;
+  margin-bottom: 0.8em;
+}
+@media (max-width: 1270px) {
+  .products__title {
+    font-size: calc(24px + 16 * ((100vw - 320px) / 950));
+  }
+}
+.products__items {
+  display: grid;
+  gap: 32px;
+  grid-template-columns: repeat(auto-fit, minmax(285px, 1fr));
+}
+.products__footer {
+  padding-top: 32px;
+}
+.products__more {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  max-width: 245px;
+  min-height: 48px;
+  margin: 0 auto;
+  border: 1px solid #E89F71;
+  color: #E89F71;
+  text-align: center;
+  transition: all 0.4s ease 0s;
+  border-radius: 5px;
+}
+@media (any-hover: hover) {
+  .products__more:hover {
+    background-color: #E89F71;
+    color: white;
+  }
+}
+
+.item-product {
+  background: #f4f5f7;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+}
+@media (any-hover: hover) {
+  .item-product:hover .item-product__actions {
+    opacity: 1;
+    visibility: visible;
+  }
+}
+.item-product__image {
+  padding-bottom: 10px;
+}
+.item-product__body {
+  flex: 1 1 auto;
+  padding: 16px 16px 30px 16px;
+  display: flex;
+  flex-direction: column;
+}
+.item-product__content {
+  flex: 1 1 auto;
+}
+.item-product__title {
+  font-size: 24px;
+  line-height: 120%;
+  font-weight: 600;
+  margin-bottom: 0.3333333333em;
+}
+@media (max-width: 1270px) {
+  .item-product__title {
+    font-size: calc(20px + 4 * ((100vw - 320px) / 950));
+  }
+}
+.item-product__text {
+  color: #898989;
+  line-height: 150%;
+  margin-bottom: 0.3333333333em;
+}
+.item-product__prices {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  line-height: 150%;
+}
+.item-product__price {
+  font-size: 20px;
+  font-weight: 600;
+}
+@media (max-width: 1270px) {
+  .item-product__price {
+    font-size: calc(16px + 4 * ((100vw - 320px) / 950));
+  }
+}
+.item-product__price_old {
+  font-size: 16px;
+  font-weight: normal;
+  margin-left: 16px;
+  color: #b0b0b0;
+}
+@media (max-width: 1270px) {
+  .item-product__price_old {
+    font-size: calc(14px + 2 * ((100vw - 320px) / 950));
+  }
+}
+@media (any-hover: none) {
+  .item-product__actions {
+    padding-top: 15px;
+  }
+}
+@media (any-hover: hover) {
+  .item-product__actions {
+    opacity: 0;
+    visibility: hidden;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: all 0.4s ease 0s;
+    z-index: 3;
+    background-color: rgba(58, 58, 58, 0.74);
+  }
+}
+
+.actions-product__body {
+  min-width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0 15px;
+  justify-content: space-between;
+}
+.actions-product__button {
+  flex: 1 1 100%;
+  border-radius: 5px;
+}
+.actions-product__button:not(:last-child) {
+  margin-bottom: 24px;
+}
+.actions-product__link {
+  display: flex;
+  align-items: center;
+  color: inherit;
+  font-weight: 600;
+  transition: color 0.4s ease 0s;
+}
+.actions-product__link::before {
+  font-size: 16px;
+  margin-right: 10px;
+}
+@media (any-hover: hover) {
+  .actions-product__link {
+    color: white;
+  }
+  .actions-product__link:hover {
+    color: #E89F71;
+  }
+}
+
+.btn_white {
+  color: #E89F71;
+  background-color: #fff;
+  height: 48px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: all 0.4s ease 0s;
+}
+@media (any-hover: hover) {
+  .btn_white:hover {
+    background-color: #E89F71;
+    color: #fff;
+  }
+}
+
+.item-products__labels {
+  position: absolute;
+  z-index: 2;
+  display: flex;
+  flex-direction: column;
+  right: 24px;
+  top: 24px;
+}
+@media (max-width: 1270px) {
+  .item-products__labels {
+    right: calc(10px + 14 * ((100vw - 320px) / 950));
+  }
+}
+@media (max-width: 1270px) {
+  .item-products__labels {
+    top: calc(10px + 14 * ((100vw - 320px) / 950));
+  }
+}
+.item-products__label {
+  flex: 0 0 48px;
+  width: 48px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  font-weight: 500;
+}
+.item-products__label:not(:last-child) {
+  margin-bottom: 10px;
+}
+.item-products__label_sale {
+  background: #e97171;
+}
+.item-products__label_new {
+  background: #2ec1ac;
 }/*# sourceMappingURL=main.css.map */
