--- a/css/main.scss
+++ b/css/main.scss
@@ -5,6 +5,15 @@
 	
 }
 
+.page {
+	&__main-slider {
+	}
+	&__advantages {
+	}
+	&__products {
+		}
+}
+
 .main-slider {
 	background: linear-gradient(90deg, $pink_main 61%, $pink_light 32%);
 		&__wrapper {
@@ -331,12 +340,8 @@
 }
 
 /////////////////////////////////////////////////////////////////////////////////////
-.page {
 
-	&__advantages {
-	
-	}
-}
+
 .advantages {
 	@include adaptiv-value('padding-top',88, 30, 1);
 	@include adaptiv-value('padding-bottom',88, 30, 1);
@@ -393,3 +398,231 @@
 		color: $grey_color;
 	}
 }
+
+/////////////////////////////////////////////////////////////////////////////////////////
+
+
+.products {
+	@include adaptiv-value('padding-bottom', 44, 33, 1);
+
+		&__wrapper {
+			width: 100vw;
+		}
+
+		&__container {
+			max-width: $maxWidthContainer+px;
+			width: 100%;
+			margin: 0 auto;
+		}
+
+		&__title {
+			@include adaptiv-value('font-size', 40, 24, 1);
+			line-height: 120%;
+			font-weight: 700;
+			text-align: center;
+			margin-bottom: 32px/40px * 1em;
+		}
+
+		&__items {
+			display: grid;
+			gap: 32px;
+			grid-template-columns: repeat(auto-fit, minmax(285px, 1fr));
+		}
+
+		&__footer {
+			padding-top: 32px;
+		}
+
+		&__more {
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			max-width: 245px;
+			min-height: 48px;
+			margin: 0 auto;
+			border: 1px solid $orange_color;
+			color: $orange_color;
+			text-align: center;
+			transition: all 0.4s ease 0s;
+			border-radius: 5px;
+			@media (any-hover:hover) {
+				&:hover {
+					background-color: $orange_color;
+					color: white;
+				}
+			}
+		}
+
+}
+
+.item-product {
+	background: #f4f5f7;
+	display: flex;
+	flex-direction: column;
+	position: relative;
+	@media (any-hover:hover) {
+		&:hover {
+			.item-product__actions {
+				opacity: 1;
+				visibility: visible;
+			}
+		}
+	}
+
+		&__image {
+			padding-bottom: 10px;
+		}
+
+		&__body {
+			flex: 1 1 auto;
+			padding: 16px 16px 30px 16px;
+			display: flex;
+			flex-direction: column;
+		}
+
+		&__content {
+			flex: 1 1 auto;
+		}
+
+		&__title {
+			@include adaptiv-value('font-size', 24, 20, 1);
+			line-height: 120%;
+			font-weight: 600;
+			margin-bottom: 8px/24px * 1em;
+		}
+
+		&__text {
+			color: $grey_color;
+			line-height: 150%;
+			margin-bottom: 8px/24px * 1em;
+		}
+
+		&__prices {
+			display: flex;
+			align-items: center;
+			flex-wrap: wrap;
+			line-height: 150%;
+		}
+		
+
+		&__price {
+			@include adaptiv-value('font-size', 20, 16, 1);
+			font-weight: 600;
+
+			&_old {
+				@include adaptiv-value('font-size', 16, 14, 1);
+				font-weight: normal;
+				margin-left: 16px;
+				color: #b0b0b0;
+			}
+		}
+
+		&__actions {
+			@media (any-hover:none) {
+				padding-top: 15px;
+			}
+			@media (any-hover:hover) {
+				opacity: 0;
+				visibility: hidden;
+				position: absolute;
+				top: 0;
+				left: 0;
+				width: 100%;
+				height: 100%;
+				display: flex;
+				justify-content: center;
+				align-items: center;
+				transition: all 0.4s ease 0s;
+				z-index: 3;
+				background-color: rgba(58, 58, 58, 0.74);
+			}
+		}
+}
+
+.actions-product {
+
+	&__body {
+		min-width: 100%;
+		display: flex;
+		flex-wrap: wrap;
+		padding: 0 15px;
+		justify-content: space-between;
+	}
+
+	&__button {
+		flex: 1 1 100%;
+		border-radius: 5px;
+		&:not(:last-child) {
+			margin-bottom: 24px;
+		}
+	}
+
+	&__link {
+		display: flex;
+		align-items: center;
+		color: inherit;
+		font-weight: 600;
+		transition: color 0.4s ease 0s;
+		&::before {
+			font-size: 16px;
+			margin-right: 10px;
+		}
+		@media (any-hover:hover) {
+			color: white;
+			&:hover {
+				color: $orange_color;
+			}
+		}
+	}
+}
+.btn {
+
+	&_white {
+		color: $orange_color;
+		background-color: #fff;
+		height: 48px;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		transition: all 0.4s ease 0s;
+		@media (any-hover:hover) {
+			&:hover {
+				background-color: $orange_color;
+				color: #fff;
+			}
+		}
+	}
+}
+.item-products {
+
+		&__labels {
+			position: absolute;
+			z-index: 2;
+			display: flex;
+			flex-direction: column;
+			@include adaptiv-value('right', 24, 10, 1);
+			@include adaptiv-value('top', 24, 10, 1);
+		}
+
+		&__label {
+			flex: 0 0 48px;
+			width: 48px;
+			border-radius: 50%;
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			color: white;
+			font-weight: $gil_500;
+			&:not(:last-child) {
+				margin-bottom: 10px;
+			}
+
+			&_sale {
+				background: #e97171;
+			}
+			&_new {
+				background: #2ec1ac;
+			}
+		}
+}
+
